--- a/_layout.ejs
+++ b/_layout.ejs
@@ -45,10 +45,17 @@
 		<%- partial("components/_sidebar")%>
 		<% } else { -%>
 		<%- partial("login")%>
-		<% } -%>	
+		<% } -%>
 	</div>
 	<!-- Modal: edit account -->
 	<%- partial("components/_accountEditModal")%>
 	<script src="js/<%= current.source %>.js"></script>
+	<footer>
+		<div class="row">
+			<div class="col-12 text-center">
+				<small>E-mail：overseas@ncnu.edu.tw 電話：(049)2910960#2267 傳真：(049)2911182</small>
+			</div>
+		</div>
+	</footer>
 </body>
 </html>
