--- a/login.ejs
+++ b/login.ejs
@@ -29,14 +29,15 @@
 					<input type="password" id="password" class="form-control" placeholder="Password" aria-describedby="basic-addon1">
 				</div>
 			</div>
+			<!--
 			<div class="form-group">
-				<p class="text-right">    
+				<p class="text-right">
 					<a href="">無法登入？</a>
 				</p>
 			</div>
+			-->
 			<div class="form-group">
-				<button type="button" class="btn btn-success btn-block" id="btn-login">Log In</button>
-				<button type="button" class="btn btn-success btn-block" id="getStatus">status</button>
+				<button type="button" class="btn btn-success btn-block" id="btn-login">登入</button>
 			</div>
 			<div class="form-group">
 				<p id="errMsg"></p>
