--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -87,6 +87,12 @@
 									<input type="text" class="form-control" id="sortOrder">
 								</div>
 							</div>
+							<div id="useEngData" class="form-check col-6">
+								<label class="form-check-label text-danger">
+									<input class="form-check-input" type="checkbox" id="useEngData" value="">
+									今年暫不提供英文系所分則
+								</label>
+							</div>
 						</div>
 						<div class="row">
 							<div class="form-group col-6">
