--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -135,9 +135,9 @@
 
 <div class="row" style="font-size:18px">
 	<ul>
-		<li><a href="https://api.overseas.ncnu.edu.tw:8443/forms/海聯108僑生專案擴增名額調查表.xlsx" target="_blank"> 擴增名額Excel下載</a></li>
 		<li><span style="color:red"> 107學年度本地生招生缺額數 </span>請依據實際招收僑生之需求填報。例如：學校107學年度本地生招生缺額數計50名，其中30名擬招收僑生（含港澳生及港澳具外國國籍之華裔學生），<br /> 請依實際需求填30名。</li>
-		<li>請於<span style="color:red"> 6月20日（星期三）下午5時前 </span>確認108學年度各學制僑生招生名額總量（含招生名額增量調查表）無誤並列印系統產生之「108學年度僑生名額總量調查回覆表」，<br /> 經單位主管簽章確認後，回傳至本會（電子郵件信箱：overseassurvey@gmail.com，傳真：049-2911182），始完成僑生名額填報作業。</li>
+		<li>請於<span style="color:red"> 6月20日（星期三）下午5時前 </span>登入本系統填報108學年度各學制僑生招生名額總量（含招生名額增量調查表），確認無誤並列印系統產生之「108學年度僑生名額總量調查回覆表」，經單位主管簽章確認後，回傳至本會（電子郵件信箱：overseassurvey@gmail.com，傳真：049-2911182），始完成僑生名額填報作業。</li>
+		<li>欲申請僑生名額增量之學校，務必下載並填列<a href="https://api.overseas.ncnu.edu.tw:8443/forms/海聯108僑生專案擴增名額調查表.xlsx" target="_blank">「108僑生名額增量調查表」</a>，於107年6月20日（星期三）前備文敘明擬增量之班別且檢附前開增量調查表向教育部提出申請，副知本會並將調查表電子檔併寄至本會電子郵件信箱（overseassurvey@gmail.com）俾利彙整。</li>
 	</ul>
 </div>
 
