--- a/systemQuota.ejs
+++ b/systemQuota.ejs
@@ -12,9 +12,9 @@
 
 <div class="row">
 	<div class="col-2 offset-10 text-center float-right">
-		<button id="btn-pdf" class="btn btn-success">
+		<a href="#" class="btn btn-success btn-block " target="_blank" role="button" id="btn-pdf">
 			下載ＰＤＦ
-		</button>
+		</a>
 	</div>
 </div>
 
