--- a/components/_deptInfo.ejs
+++ b/components/_deptInfo.ejs
@@ -87,9 +87,9 @@
 									<input type="text" class="form-control" id="sortOrder">
 								</div>
 							</div>
-							<div id="useEngData" class="form-check col-6">
+							<div id="useEngData" class="form-check col-6" style="display:none">
 								<label class="form-check-label text-danger">
-									<input class="form-check-input" type="checkbox" id="useEngData" value="">
+									<input class="form-check-input" type="checkbox" id="useEngData" value="" >
 									今年暫不提供英文系所分則
 								</label>
 							</div>
